<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content">




    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/backButton"
                android:id="@+id/backButton" />
        </LinearLayout>


        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchViewSelectContact"
            android:clickable="true"
            android:queryHint="Choose Contact"
            android:inputType="textPersonName" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linlayouthorCompetenciesCase"
            android:visibility="visible">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/linlayverCompTxt"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency1"
                    android:id="@+id/txtviewCompetency1"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency2"
                    android:id="@+id/txtviewCompetency2"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency3"
                    android:id="@+id/txtviewCompetency3"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency4"
                    android:id="@+id/txtviewCompetency4"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency5"
                    android:id="@+id/txtviewCompetency5"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency6"
                    android:id="@+id/txtviewCompetency6"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency7"
                    android:id="@+id/txtviewCompetency7"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency8"
                    android:id="@+id/txtviewCompetency8"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency9"
                    android:id="@+id/txtviewCompetency9"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency10"
                    android:id="@+id/txtviewCompetency10"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency11"
                    android:id="@+id/txtviewCompetency11"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency12"
                    android:id="@+id/txtviewCompetency12"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency13"
                    android:id="@+id/txtviewCompetency13"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency14"
                    android:id="@+id/txtviewCompetency14"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency15"
                    android:id="@+id/txtviewCompetency15"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency16"
                    android:id="@+id/txtviewCompetency16"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency17"
                    android:id="@+id/txtviewCompetency17"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency18"
                    android:id="@+id/txtviewCompetency18"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency19"
                    android:id="@+id/txtviewCompetency19"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency20"
                    android:id="@+id/txtviewCompetency20"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency21"
                    android:id="@+id/txtviewCompetency21"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/competency22"
                    android:id="@+id/txtviewCompetency22"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linlayverCompRating">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency1" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency2" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency3" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency4" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency5" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency6" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency7" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency8" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency9" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency10" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency11" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency12" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency13" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency14" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency15" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency16" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency17" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency18" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency19" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency20" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency21" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ratingBarCompetency22" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSave"
                android:id="@+id/btnSave" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/footerLayoutBox">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/footer"
                android:text="This is the footer section"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginTop="30dp" />
        </LinearLayout>



    </LinearLayout>

</ScrollView>