<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenuButton1"
        android:id="@+id/mainmenuButton1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenuButton2"
        android:id="@+id/mainmenubutton2"
        android:layout_below="@+id/mainmenuButton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenuButton3"
        android:id="@+id/mainmenubutton3"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/mainmenubutton2"
        android:layout_alignRight="@+id/mainmenubutton2"
        android:layout_alignEnd="@+id/mainmenubutton2" />
</RelativeLayout>
